# app/Http/Resources/Api/V1/CustomerResource.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Resources\Api\V1;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+
+class CustomerResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'phone' => $this->phone,
+            'name' => trim($this->name . ' ' . $this->lastname), // Combine name fields
+            'email' => $this->email,
+        ];
+    }
+}
